objects/bar__Log__c.object
<CustomObject>
    <fields>
        <fullName>bar__Log_Number__c</fullName>
        <description>External system identifier for this log entry</description>
        <externalId>true</externalId>
        <label>Log Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bar__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bar__Policy_Id__c</fullName>
        <label>Policy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bar__Run_Id__c</fullName>
        <label>Run Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bar__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INFO</fullName>
                    <color>#3366FF</color>
                    <default>true</default>
                    <label>INFO</label>
                </value>
                <value>
                    <fullName>WARN</fullName>
                    <color>#FFCC33</color>
                    <label>WARN</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                    <color>#FF0000</color>
                    <label>ERROR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bar__Timestamp__c</fullName>
        <description>Log event timestamp from the external system</description>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bar__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Metadata</fullName>
                </value>
                <value>
                    <fullName>Files &amp; Attachments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>bar__Log_Number__c</columns>
        <columns>bar__Status__c</columns>
        <columns>bar__Timestamp__c</columns>
        <columns>NAME</columns>
        <columns>bar__Message__c</columns>
        <columns>bar__Run_Id__c</columns>
        <columns>bar__Policy_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>bar__Status__c</field>
            <operation>equals</operation>
            <value>WARN,ERROR</value>
        </filters>
        <label>All Errors</label>
    </listViews>
    <listViews>
        <fullName>bar__All</fullName>
        <columns>bar__Log_Number__c</columns>
        <columns>bar__Status__c</columns>
        <columns>bar__Timestamp__c</columns>
        <columns>NAME</columns>
        <columns>bar__Message__c</columns>
        <columns>bar__Run_Id__c</columns>
        <columns>bar__Policy_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>